<resources>
    <string name="app_name">Stay Ahead</string>
    <string name="title_activity_side_nav_drawer">SideNavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_edit_goal">Edit Goal</string>
    <string name="action_delete">Delete This Goal</string>
    <string name="action_finish">Finish Goal</string>

    <string name="menu_home">Home</string>
    <string name="menu_previous_goal">Previous Goals</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_create_goal">Create New Goal</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string-array name="limit_checkpoints">
        <item>30</item>
        <item>25</item>
        <item>20</item>
        <item>15</item>
        <item>10</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
