<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.stayahead.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_previous_goal"
        android:name="com.example.stayahead.ui.previousGoal.PreviousGoalFragment"
        android:label="@string/menu_previous_goal"
        tools:layout="@layout/fragment_previous_goals" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.stayahead.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_create_goal"
        android:name="com.example.stayahead.ui.createNewGoal.CreateNewGoalFragment"
        android:label="@string/menu_create_goal"
        tools:layout="@layout/fragment_create_new_goal" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.stayahead.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.stayahead.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>